--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,3 +1,4 @@
+<hero-search></hero-search>
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]" class="col-1-4">
